[package]
name = "pong-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[[bin]]
name = "server"
path = "src/server/bin/main.rs"

[[bin]]
name = "client"
path = "src/client/bin/main.rs"

[lib]
name = "common"
path = "src/common/lib.rs"
